--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@tailwindcss/forms": "^0.4.0",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.4",
